--- a/index.html
+++ b/index.html
@@ -5,20 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pinhalzinho agro noticias</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
     <header class="cabecalho">
     <img class="imagem-cabecalho" src="logo colegio" alt="" srcset="">
     <ul class="cabecalho-lista">
+        <li class="cabecalho-titulo">pinhalzinho noticias</li>
         <li class="cabecalho-lista-item">sobre nós</li>
         <li class="cabecalho-lista-item"> login</li>
     </ul>
 </header>
 <section class="site">
     <div class="site-diiv-conteudo"></div>
-
+    <img src="images.jpeg" alt="pulveriador" class="container__imagem">
+</section>
+<section>
+    <section class="noticias">
+        <h2 class="noticia"> Últimas noticias</h2>
+        <div class="noticia"></div>
+        <div class="noticia">
+         <div class="noticia">
+        <img class="noticia" src="mANtFGtJ-biometano-1024x576.webp" alt="foto noticia 1">
+        <h3 class="noticia">Compagás investe R$ 505 milhões e entra na cadeia do biometano</h3>
+  
 
 </section>
 </body>
