--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
 
 <body>
     <header class="cabecalho">
-    <img class="imagem-cabecalho" src="logo colegio" alt="" srcset="">
+    <img class="imagem-cabecalho" src="download.png" alt="" srcset="">
     <ul class="cabecalho-lista">
-        <li class="cabecalho-titulo">pinhalzinho noticias</li>
+ 
         <li class="cabecalho-lista-item">sobre nós</li>
         <li class="cabecalho-lista-item"> login</li>
     </ul>
 </header>
 <section class="site">
-    <div class="site-diiv-conteudo"></div>
-    <img src="images.jpeg" alt="pulveriador" class="container__imagem">
+    <div class="site-diiv-conteudo">
+        <h2 class="noticia"> Últimas noticias</h2>
+    </div>
 </section>
 <section>
     <section class="noticias">
-        <h2 class="noticia"> Últimas noticias</h2>
+        
         <div class="noticia"></div>
         <div class="noticia">
          <div class="noticia">
