--- a/index.html
+++ b/index.html
@@ -5,35 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pinhalzinho agro noticias</title>
-    <link rel="stylesheet" href="style.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
     <header class="cabecalho">
-    <img class="imagem-cabecalho" src="download.png" alt="" srcset="">
-    <ul class="cabecalho-lista">
- 
-        <li class="cabecalho-lista-item">sobre nós</li>
-        <li class="cabecalho-lista-item"> login</li>
-    </ul>
-</header>
-<section class="site">
-    <div class="site-diiv-conteudo">
-        <h2 class="noticia"> Últimas noticias</h2>
-    </div>
-</section>
-<section>
-    <section class="noticias">
-        
-        <div class="noticia"></div>
-        <div class="noticia">
-         <div class="noticia">
-        <img class="noticia" src="mANtFGtJ-biometano-1024x576.webp" alt="foto noticia 1">
-        <h3 class="noticia">Compagás investe R$ 505 milhões e entra na cadeia do biometano</h3>
-  
+        <img class="imagem-cabecalho" src="MkE8B6GU-cr-logo-header.svg" alt="" srcset="">
+        <ul class="cabecalho-lista">
 
-</section>
+            <li class="cabecalho-lista-item">sobre nós</li>
+            <li class="cabecalho-lista-item"> entrar</li>
+        </ul>
+    </header>
+    <section class="site">
+        <div class="site-diiv-conteudo">
+            <h2 class="noticia"> Últimas noticias</h2>
+        </div>
+    </section>
+    <section>
+        <section class="todas-noticias">
+
+
+            <div class="noticia">
+                <img class="noticia2" src="mANtFGtJ-biometano-1024x576.webp" alt="foto noticia 1">
+                <a
+                    href="https://www.canalrural.com.br/nacional/parana/compagas-anuncia-investimentos-505-milhoes-biometano/" class="texto">Compagás
+                    investe R$ 505 milhões e entra na cadeia do biometano</a>
+            </div>
+            <div class="noticia">
+                <img class="noticia2" src="Soja-no-porto-exportação.jpeg" alt="foto noticia 2">
+                <a href="https://www.canalrural.com.br/nacional/parana/importacao-de-soja-e-recorde-para-o-mes-maio/" class="texto">Importação
+                    de soja é recorde para o mês de maio</a>
+            </div>
+            <div class="noticia">
+                <img class="noticia2" src="plano-safra-1.jpeg" alt="foto noticia 2">
+                <a href="https://www.canalrural.com.br/nacional/parana/setor-agro-pr-espera-plano-safra-24-25/"  class="texto">O que o
+                    setor agro do PR espera do Plano Safra 24/25</a>
+            </div>
+            <div class="noticia">
+                <img class="noticia2" src="integracao-taxa-lotacao-pastagens-raca-montana.jpg" alt="foto noticia 2">
+                <a
+                    href="https://www.canalrural.com.br/agricultura/pr-quer-recuperar-350-mil-hectares-de-pastagens-degradadas-ate-2030/"  class="texto">PR
+                    quer recuperar 350 mil hectares de pastagens degradadas até 2030</a>
+            </div>
+            <div class="noticia">
+                <img class="noticia2" src="Screenshot-2023-08-01-at-16-05-01-Campo-de-trigo.webp" alt="foto noticia 2">
+                <a
+                    href="https://www.canalrural.com.br/agricultura/plantio-de-trigo-alcanca-91-de-area-no-pr-mostra-deral/"  class="texto">Plantio
+                    de trigo alcança 91% de área no PR, indica Deral</a>
+            </div>
+
+        </section>
 </body>
 
 </html>
